<resources>
    <string name="app_name">MyApp1</string>
    <string name="btn1">Crear Cuenta</string>
    <string name="btn2">BOTON2</string>
    <string name="t1">Nombre de la Aplicacion</string>
    //Pantalla login

    <string name="login">INICIAR SESION</string>
    <string name="edt_email">INGRESAR CORREO</string>
    <string name="edt_pass">INGRESAR CONTRASEÑA</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_gmail">CONTINUAR CON GOOGLE</string>
    <string name="btn_cuenta">CREAR CUENTA</string>
    <string name="r_pss">RECUPERAR CONTRASEÑA</string>


</resources>